--- a/f/fl/fly/flyupload.com.html
+++ b/f/fl/fly/flyupload.com.html
@@ -1,118 +1,103 @@
-<!--The following is the downloaded HTML source of the flyupload.com privacy policy that was archived on 2007-03-25.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20070325005211id_/http%3A//www.flyupload.com/privacy.php) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the flyupload.com privacy policy that was archived on 2007-12-29.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20071229081138id_/http%3A//www.flyupload.com/privacypolicy) for the most accurate reproduction.-->
 
-<html><head>
-<title>FlyUpload / Upload your file and share</title>
-<script language="javascript" type="text/javascript" src="scripts/upload.js?v2.3">></script>
-<link rel="stylesheet" href="css/main.css" type="text/css">
-<link rel="stylesheet" type="text/css" href="css/upload.css?v2">
-<meta name="description" content="Share your files quickly, securely, and easily. Megaupload provides free web space for your documents, pictures, music and movies. We host the Internet!">
-<meta name="keywords" content="webhosting, hosting, make money, rewards, reward program, backup, file exchange, bandwidth, free download, free downloads, free upload, upload, download, downloads, mp3, movies, music, videos, shareware, top 100, top 10, top ten">
+<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN" "http://www.w3.org/TR/html4/loose.dtd"><html><head>
+
+<title>FlyUpload / Share Files</title>
+<script language="javascript" type="text/javascript" src="scripts/upload.js"></script>
+<script language="javascript" type="text/javascript" src="scripts/prototype.js"></script>
+<script language="javascript" type="text/javascript" src="scripts/copy.js?v1"></script>
+
+<link rel="stylesheet" type="text/css" href="css/main.css">
+<link rel="stylesheet" type="text/css" href="css/upload.css">
+
+<meta name="description" content="Upload and share files with FlyUpload.  Share the link on your favorite forums, myspace, facebook, your blog or email.  Safe, secure, fast, easy, trusted, private.">
+<meta name="keywords" content="fly upload, file upload, send large files, large file, ftp, upload, upload file, file transfer, ftp server, file, send, big file, send large, share, share file, share video, share audio, share photos, share documents">
+
 </head>
-<body>
+<body style="margin:0px; padding:0px">
+<!-- 72.232.205.186 -->
+
 <div class="content" align="center">
-
-<br><br>
-<a href="/"><img src="images/logo.gif" alt="FlyUpload" border="0"></a>
-<br><br>
-
-<span class="content"><a href="/">Home</a> | <a href="faq.php">Features</a> | <a href="contact.php">Contact</a> | <a href="privacy.php">Privacy</a> | <a href="tos-main.php">Terms of Service</a></span><br><br>
-</div>
-
-
-<div align="center">
-<h1>Privacy Policy</h1>
+<div style="margin-top:20px;"><a href="/"><img src="images/flyupload_250.jpg" border="0" alt="FlyUpload" width="250" height="78"></a></div>
 <br>
-  <table border="0">
-    <tbody><tr>
-     <td>
-<span style="font-size: 10.0pt; font-family: Tahoma,sans-serif">FlyUpload is 
-strongly committed to protecting the privacy of our users. This policy applies 
-only to FlyUpload, and not to the web sites of other companies or organizations 
-visited using FlyUpload.s anonymization service. Our privacy policy statement 
-will help you understand FlyUpload's commitment to safeguarding your private 
-information.</span><p></p>
-<p class="MsoNormal" style="line-height: normal"><b>
-<span style="font-size: 12.0pt; font-family: Tahoma,sans-serif; text-transform: uppercase">
-Information Collection and Use</span></b></p>
-<p class="MsoNormal" style="line-height: normal">
-<span style="font-size: 10.0pt; font-family: Tahoma,sans-serif">FlyUpload does 
-not collect any personal or individually identifiable information without the 
-informed consent of the user. We will not sell, share, or rent your confidential 
-information to third parties,&nbsp; including individuals or other organizations.</span></p>
-<p class="MsoNormal" style="line-height: normal"><b>
-<span style="font-size: 12.0pt; font-family: Tahoma,sans-serif; text-transform: uppercase">
-Intelligent Caching</span></b></p>
-<p class="MsoNormal" style="line-height: normal">
-<span style="font-size: 10.0pt; font-family: Tahoma,sans-serif">FlyUpload may 
-occasionally use caching technology to cache frequently requested Web content. 
-Caching mechanisms are used to serve web pages directly from the FlyUpload local 
-storage as a means to make web performance faster and more efficient. We do not 
-cache or locally store any end-to-end web content transfers, like e-commerce 
-transactions, via the Secure Socket Layer (SSL).</span></p>
-<p class="MsoNormal" style="line-height: normal"><b>
-<span style="font-size: 12.0pt; font-family: Tahoma,sans-serif; text-transform: uppercase">
-Internet Cookies</span></b></p>
-<p class="MsoNormal" style="line-height: normal">
-<span style="font-size: 10.0pt; font-family: Tahoma,sans-serif">FlyUpload&nbsp; may 
-use a feature of your Internet browser called a "cookie" to assign a unique 
-identification to your computer to maintain a session state. These short-lived 
-cookies are not written to your hard drive and are removed when you close the 
-browser. This means that not only are your web activities kept private, but also 
-that your hard drive memory is not depleted. Our customizable user preferences 
-feature uses a single cookie, which is stored on your local hard drive. This 
-cookie is used for user customizable privacy options. FlyUpload does not, and 
-will not, use cookies to retrieve personal information about you.</span></p>
-<p class="MsoNormal" style="line-height: normal"><b>
-<span style="font-size: 12.0pt; font-family: Tahoma,sans-serif; text-transform: uppercase">
-Sharing</span></b></p>
-<p class="MsoNormal" style="line-height: normal">
-<span style="font-size: 10.0pt; font-family: Tahoma,sans-serif">We may share 
-aggregate demographic information with our partners and advertisers. This is not 
-linked to any personal information and cannot identify any individual person.</span></p>
-<p class="MsoNormal" style="line-height: normal"><b>
-<span style="font-size: 12.0pt; font-family: Tahoma,sans-serif; text-transform: uppercase">
-Links</span></b></p>
-<p class="MsoNormal" style="line-height: normal">
-<span style="font-size: 10.0pt; font-family: Tahoma,sans-serif">This web site 
-contains links to other sites. Please be aware that FlyUpload is not responsible 
-for the privacy practices of these other sites. We encourage our users to read 
-the privacy statements of each and every web site that collects personally 
-identifiable information for their protection. This privacy statement applies 
-solely to information collected by the FlyUpload web site.</span></p>
-<p class="MsoNormal" style="line-height: normal"><b>
-<span style="font-size: 12.0pt; font-family: Tahoma,sans-serif; text-transform: uppercase">
-Newsletter</span></b></p>
-<p class="MsoNormal" style="line-height: normal">
-<span style="font-size: 10.0pt; font-family: Tahoma,sans-serif">If a user wishes 
-to subscribe to our newsletter, we ask for contact information such as name and 
-email address.</span></p>
-<p class="MsoNormal" style="line-height: normal"><b>
-<span style="font-size: 12.0pt; font-family: Tahoma,sans-serif; text-transform: uppercase">
-Server Log Files</span></b></p>
-<p class="MsoNormal" style="line-height: normal">
-<span style="font-size: 10.0pt; font-family: Tahoma,sans-serif">We use server 
-logs to analyze trends, administer the site, and gather broad demographic 
-information for performance assessments and aggregate use. We do not log the 
-sites that users visit. The logging data is collected as part of our attempt to 
-monitor ongoing performance and service integrity in order to enhance our 
-service offering. We have implemented strict technical and organizational 
-measures to ensure that the log data is protected at all times and destroyed 
-after statistical analysis by our security and performance engineering teams. 
-Performance statistics logs are collected from time to time in order to evaluate 
-the scalability of the FlyUpload service and/or introduce new service 
-enhancements.</span></p>
-<p class="MsoNormal" style="line-height: normal"><b>
-<span style="font-size: 12.0pt; font-family: Tahoma,sans-serif; text-transform: uppercase">
-Notification of Changes</span></b></p>
-<p class="MsoNormal" style="line-height: normal">
-<span style="font-size: 10.0pt; font-family: Tahoma,sans-serif">This privacy 
-statement was last updated on March 13, 2007</span></p>
-
-     </td>
-    </tr>
-  </tbody></table>
+<a href="/">Home</a> |
+<a href="myuploads">My Files</a> | <a href="whyfly">Why Fly?</a> | <a href="widget">Widget</a> | <a href="about">About Us</a> |
+<a href="http://share.flyupload.com">Share.Flyupload.com</a>
+<br>
+<a href="dmca">DMCA Policy</a> |  <a href="privacypolicy">Privacy Policy</a> | <a href="termsofservice">Terms of Service</a><br>
 </div>
+
+
+<center>
+<h1>Privacy Policy</h1>
+<p>
+
+</p><table width="500"><tbody><tr><td>
+<a href="http://www.truste.org/ivalidate.php?url=www.flyupload.com&amp;sealid=101"><img src="images/truste_seal_ctv.gif" alt="TrustE" border="0" style="float:right"></a>
+ 
+Last Updated: May 6, 2007
+<p>FlyUpload is strongly committed to protecting the privacy of our users. This policy applies only to FlyUpload. Our privacy policy statement will help you understand FlyUpload's commitment to safeguarding your private information. 
+</p><p><span style="text-transform: uppercase; font-weight:bold">INFORMATION COLLECTION AND USE</span>
+</p><p>FlyUpload does not collect any personal or individually identifiable information without the informed consent of the user. The only page where we collect personally identifiable information is on our .Contact Us. form.  We use this information (such as name, email address) only to respond to your inquiries or feedback.  You may not opt-out of receiving our response.  
+We will not sell, share, or rent your confidential information to third parties, including individuals or other organizations.
+</p><p>FlyUpload Inc. is a licensee of the TRUSTe Privacy Program. TRUSTe is an independent, non-profit organization whose mission is to build users. trust and confidence in the Internet by promoting the use of fair information practices. This privacy statement covers the Web site www.flyupload.com. Because this Web site wants to demonstrate its commitment to your privacy, it has agreed to disclose its information practices and have its privacy practices reviewed for compliance by TRUSTe. The TRUSTe program only covers information that is collected through this Web site, and does not cover information that may be collected through any software downloaded from this Web site. If you have questions or concerns regarding this statement, you should first contact Khalid Shaikh at 1269 Lakeside Drive, Suite 1110, Sunnyvale, California, 94085. If you do not receive acknowledgement of your inquiry or your inquiry has not been satisfactorily addressed, you should contact TRUSTe at <a href="http://www.truste.org/consumers/watchdog_complaint.php">http://www.truste.org/consumers/watchdog_complaint.php</a> TRUSTe will then serve as a liaison with us to resolve your concerns. 
+</p><p><span style="text-transform: uppercase; font-weight:bold">INTELLIGENT CACHING</span>
+</p><p>FlyUpload may occasionally use caching technology to cache frequently requested Web content. Caching mechanisms are used to serve web pages directly from the FlyUpload local storage as a means to make web performance faster and more efficient. We do not cache or locally store any end-to-end web content transfers, like e-commerce transactions, via the Secure Socket Layer (SSL).
+</p><p><span style="text-transform: uppercase; font-weight:bold">INTERNET COOKIES</span>
+FlyUpload may use a feature of your Internet browser called a "cookie" to assign a unique identification to your computer to maintain a session state. These short-lived cookies are not written to your hard drive and are removed when you close the browser. This means that not only are your web activities kept private, but also that your hard drive memory is not depleted. Our customizable user preferences feature uses a single cookie, which is stored on your local hard drive. This cookie is used for user customizable privacy options. FlyUpload does not, and will not, use cookies to retrieve personal information about you.
+</p><p>We use a third-party tracking service that uses cookies to track non-personally identifiable information about visitors to our site in the aggregate usage and volume statistics to help target advertisements to the user. 
+</p><p>Some of our business partners (e.g., advertisers) use cookies on our site. We have no access to or control over these cookies. See Third Party Advertisers. 
+</p><p><span style="text-transform: uppercase; font-weight:bold">SHARING</span>
+</p><p>We may share aggregate demographic information with our partners and advertisers. This is not linked to any personal information and cannot identify any individual person.
+</p><p><span style="text-transform: uppercase; font-weight:bold">THIRD PARTY ADVERTISERS</span>
+</p><p>The ads appearing on this Web site are delivered to users by third party ad servers. We share Web site usage information about users with our advertisers for the purpose of targeting our Internet advertisements on this site. 
+</p><p>Google Analytics, ValueClickMedia, Tribal Fusion, Google AdSense uses cookies and clear GIFs on this site, which allow it to recognize a user's cookie when a user visits this site. The information that Google Analytics, ValueClickMedia, Tribal Fusion, Google AdSense collects and shares through this technology is not personally identifiable. 
+</p><p><span style="text-transform: uppercase; font-weight:bold">LINKS</span> 
+</p><p>This web site contains links to other sites. Please be aware that FlyUpload is not responsible for the privacy practices of these other sites. We encourage our users to read the privacy statements of each and every web site that collects personally identifiable information for their protection. This privacy statement applies solely to information collected by the FlyUpload web site.
+Note that when you choose to use the remove ads feature on our site that you will be taken to PayPal.s site and that their privacy policy governs the use and collection of the data submitted. We encourage you to review their privacy policy. 
+</p><p><span style="text-transform: uppercase; font-weight:bold">SERVER LOG FILES</span>
+</p><p>We use server logs to analyze trends, administer the site, and gather broad demographic information for performance assessments and aggregate use. We do not log the sites that users visit. The logging data is collected as part of our attempt to monitor ongoing performance and service integrity in order to enhance our service offering. We have implemented strict technical and organizational measures to ensure that the log data is protected at all times and destroyed after statistical analysis by our security and performance engineering teams. Performance statistics logs are collected from time to time in order to evaluate the scalability of the FlyUpload service and/or introduce new service enhancements. Log files are not tied to personally identifiable information.
+</p><p><span style="text-transform: uppercase; font-weight:bold">SECURITY DISCLOSURE</span>
+</p><p>The security of your personal information is important to us. We follow generally accepted industry standards to protect the personal information submitted to us, both during transmission and once we receive it. No method of transmission over the Internet, or method of electronic storage, is 100% secure, however. Therefore, while we strive to use commercially acceptable means to protect your personal information, we cannot guarantee its absolute security. 
+</p><p>If you have any questions about security on our Web site, you can send email us at <a href="mailto:privacypolicy@flyupload.com">privacypolicy@flyupload.com</a>. 
+</p><p><span style="text-transform: uppercase; font-weight:bold">LEGAL DISCLOSURE</span>
+</p><p>We reserve the right to disclose your collected information as required by law and when we believe that disclosure is necessary to protect our rights and/or comply with a judicial proceeding, court order, or legal process served on our Web site.
+</p><p><span style="text-transform: uppercase; font-weight:bold">CHANGES IN THIS PRIVACY STATEMENT</span>
+</p><p>If we decide to change our privacy policy, we will post those changes to this privacy statement, the home page, and other places we deem appropriate so that you are aware of what information we collect, how we use it, and under what circumstances, if any, we disclose it. 
+</p><p>We reserve the right to modify this privacy statement at any time, so please review it frequently. If we make material changes to this policy, we will notify you here, by email, or by means of a notice on our home page. 
+</p><p><span style="text-transform: uppercase; font-weight:bold">CONTACT US</span>
+</p><p>If you have any questions or suggestions regarding our privacy policy, please contact us at:
+</p><blockquote>
+FlyUpload Inc<br>
+1269 Lakeside Drive, Suite 1110<br>
+Sunnyvale, CA 94085<br>
+(408)712-3580<br>
+<a href="mailto:privacypolicy@flyupload.com">privacypolicy@flyupload.com</a><br>
+</blockquote><p>
+    </p></td></tr>
+  </tbody></table>
+</center>
+<center>
+<table><tbody><tr>
+<td style="padding-left:0px"><script src="https://seal.verisign.com/getseal?host_name=www.flyupload.com&amp;size=S&amp;use_flash=YES&amp;use_transparent=YES&amp;lang=en" type="text/javascript"></script></td>
+<td style="padding-left:25px"><a href="http://www.truste.org/ivalidate.php?url=www.flyupload.com&amp;sealid=101"><img src="images/truste_seal_web.gif" border="0" alt="TrustE"></a></td>
+<td style="padding-left:15px">
+<!--<script>digg_url = 'http://digg.com/tech_news/FlyUpload_let_s_you_share_files_2GB_free_by_YouSendIt_founders';</script><script src="http://digg.com/api/diggthis.js"></script></td>
+<td style="padding-left:10px" width=180>Help FlyUpload grow to serve you better, digg this today!<p>-->
+
+<a href="http://www.myspace.com/flyupload">Join us on MySpace</a><br>
+<a href="http://www.facebook.com/profile.php?id=831575436">Join us on Facebook</a>
+<a href="http://www.facebook.com/group.php?gid=2459050940">(group)</a><br>
+
+</td></tr></tbody></table>
+safe • secure • fast • easy • trusted • private &nbsp;<br>
+<!--<font color="#999999">Feedback? +1-408-914-2476</font><br>-->
+<font color="#999999">© FlyUpload 2007</font><br>
+</center>
+
+<script type="text/javascript" src="http://cetrk.com/pages/scripts/0004/3831.js"> </script>
+
 <script src="http://www.google-analytics.com/urchin.js" type="text/javascript">
 </script>
 <script type="text/javascript">
