--- a/t/te/tee/teenfreeway.com.html
+++ b/t/te/tee/teenfreeway.com.html
@@ -1,15 +1,27 @@
-<!--The following is the downloaded HTML source of the teenfreeway.com privacy policy that was archived on 2007-06-16.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20070616045232id_/http%3A//teenfreeway.com/newdesignfiles/privacy.htm) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the teenfreeway.com privacy policy that was archived on 2007-12-29.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20071229084549id_/http%3A//www.teenfreeway.com/newdesignfiles/privacy.htm) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//IETF//DTD HTML//EN"><html><head><style type="text/css"><!--
     A:link {text-decoration: none} A:visited {text-decoration: none}
-    A:active {text-decoration: none}--></style>
+    A:active {text-decoration: none}
+.style1 {
+	font-size: large;
+	font-style: italic;
+	font-weight: bold;
+	font-family: Verdana;
+}
+.style2 {
+	font-size: x-small;
+	font-family: Verdana;
+}
+--></style>
 <title>TeenFreeway - Privacy Policy</title>
+<link rel="stylesheet" type="text/css" href="../stylesheets/tfrycss1.css">
 </head>
 
 <body bgcolor="#CCFF99">
 <font face="Arial, Helvetica, sans-serif" size="2">
-<table cellspacing="0" cellpadding="2" width="500" align="center" border="0">
+<p>&nbsp;</p><table cellspacing="0" cellpadding="2" width="500" align="center" border="0">
   <tbody>
     <tr>
       <td width="730">
@@ -25,19 +37,19 @@
     </tr>
     <tr>
       <td width="730">
-        <b><i><font face="Verdana" size="5">Privacy Policy</font></i></b>
-        <p>
-<font face="Verdana" size="2">
-Our goal in collecting personal information from you upon registration is to
+        <span class="style1">Privacy Policy</span>
+       
+
+<p class="style2">Our goal in collecting personal information from you upon registration is to
 provide you, the user, with the best experience possible by targeting site
 content and advertisements to our audience.&nbsp;&nbsp; Your information is
 stored in our database and not released to any outside parties.&nbsp;&nbsp; We
 will not sell, rent, or distribute any of the registration information that you
 provide to us without your consent.
-</font>
+
         </p>
-        <p>
-<font face="Verdana" size="2">
+        <p class="style2">
+
 But please keep in mind that whenever you voluntarily give out any personally
 identifying information to any merchant listed on our site, that this
 information can be collected and used by others.&nbsp;&nbsp; You should always
@@ -47,24 +59,24 @@ name, your home or other physical address, e-mail address, telephone number or
 any information that makes you identifiable.&nbsp;&nbsp; If you post any of this
 personally identifying information in online areas that are accessible to the
 public, you may receive unsolicited messages from other parties in return.&nbsp;
-</font>
+
         </p>
-        <p>
-<font face="Verdana" size="2">
+        <p class="style2">
+
 TeenFreeway is by definition for teenagers (i.e. 13 and older) -- and older
 folks who are teenagers at heart!&nbsp; You must be 13 or older to participate
 in any TeenFreeway promotions.&nbsp; For those sites for which TeenFreeway is a
 conduit, again, you must read the privacy guidelines of that site which may
-differ materially from those of TeenFreeway.</font>
-        </p><p><font face="Verdana" size="2">The United States Children's Online
+differ materially from those of TeenFreeway.
+        </p><p class="style2">The United States Children's Online
         Privacy Protection Act went into effect on April 21st, 2000. In order to
         comply with that law, TeenFreeway will not knowingly process any data
         that was submitted to us by a visitor who is under 13 years of age.&nbsp;
         TeenFreeway is all about providing the best freebies on the web for
-        teenagers.</font></p>
-        <p><font face="Verdana" size="2">Please <a target="_blank" href="http://www.ftc.gov/kidzprivacy">Visit
+        teenagers.</p>
+        <p class="style2">Please <a target="_blank" href="http://www.ftc.gov/kidzprivacy">Visit
         http://www.ftc.gov/kidzprivacy</a> for information from the Federal
-        Trade Commission about protecting children's online privacy.</font></p>
+        Trade Commission about protecting children's online privacy.</p>
         <p align="center">&nbsp; <font face="Verdana"><b></b></font></p><form><font face="Verdana"><b>
 <p align="center">
 <input type="image" src="images/closewind_but1.gif" onclick="javascript:window.close();" style="font-family: Arial; font-weight: bold" width="212" height="49">
@@ -75,9 +87,15 @@ differ materially from those of TeenFreeway.</font>
 &nbsp;
       </p></td>
     </tr>
-  </tbody>
-</table>
-<p>&nbsp;</p>
 
 
-</font></body></html>
+
+<script src="http://www.google-analytics.com/urchin.js" type="text/javascript">
+</script>
+<script type="text/javascript">
+_uacct = "UA-3209251-1";
+urchinTracker();
+</script>
+
+
+</tbody></table></font></body></html>
