--- a/a/ad/adc/adcouncil.org.html
+++ b/a/ad/adc/adcouncil.org.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the adcouncil.org privacy policy that was archived on 2007-06-27.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20070627080750id_/http%3A//www.adcouncil.org/default.aspx%3Fid%3D125) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the adcouncil.org privacy policy that was archived on 2007-12-29.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20071229123735id_/http%3A//www.adcouncil.org/default.aspx%3Fid%3D125) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd"><html xmlns="http://www.w3.org/1999/xhtml"><head>
 	<meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1">
@@ -10,7 +10,7 @@
 	<link href="css/screen.css" rel="stylesheet" type="text/css" media="screen">
 	<link href="css/print.css" rel="stylesheet" type="text/css" media="print">
 	<script language="javascript" type="text/javascript" src="js/global.js"></script>
-<script language="javascript" src="/__utm.js" type="text/javascript"></script>
+<!--script language="javascript" src="/__utm.js" type="text/javascript"></script-->
 	<title>Ad Council : Privacy Policy</title>
 </head>
 
@@ -24,7 +24,7 @@
 				<div id="menu_top"><a href="default.aspx?id=15" title="Campaigns" onmouseover="swap('campaigns','campaigns_on');swap('arrows1','arrows1_on')" onmouseout="swap('campaigns','campaigns');swap('arrows1','arrows1')"><img src="images/menu_top_campaigns.gif" alt="Campaigns" name="campaigns" border="0" title="Campaigns"></a><img src="images/menu_top_arrows.gif" name="arrows1" alt=""><a href="default.aspx?id=68" title="About Ad Council" onmouseover="swap('about','about_on');swap('arrows1','arrows1_on');swap('arrows2','arrows2_on')" onmouseout="swap('about','about');swap('arrows1','arrows1');swap('arrows2','arrows2')"><img src="images/menu_top_about.gif" alt="About Ad Council" name="about" border="0" title="About Ad Council"></a><img src="images/menu_top_arrows.gif" name="arrows2" alt=""><a href="default.aspx?id=87" title="Get Involved" onmouseover="swap('getin','getin_on');swap('arrows2','arrows2_on');swap('arrows3','arrows3_on')" onmouseout="swap('getin','getin');swap('arrows2','arrows2');swap('arrows3','arrows3')"><img src="images/menu_top_getinvolved.gif" alt="Get Involved" name="getin" border="0" title="Get Involved"></a><img src="images/menu_top_arrows.gif" name="arrows3" alt=""><a href="default.aspx?id=4" title="Ad Council News" onmouseover="swap('news','news_on');swap('arrows3','arrows3_on')" onmouseout="swap('news','news');swap('arrows3','arrows3')"><img src="images/menu_top_news.gif" alt="Ad Council News" name="news" border="0" title="Ad Council News"></a></div>
 			</div>
 			<div id="head_right">
-				<!--<a href="#"><img src="images/head_button_espanol.gif" alt="Una versi&oacute;n completa de este sitio en espa&ntilde;ol" border="0" title="Una versi&oacute;n completa de este sitio en espa&ntilde;ol" /></a>-->
+				<a href="default.aspx?id=399"><img src="images/head_button_espanol.gif" alt="Una versión completa de este sitio en español" border="0" title="Una versión completa de este sitio en español"></a>
 				<a href="http://psacentral.adcouncil.org" title="PSA Central (link will open in a new window)" target="site_ext_window"><img src="images/head_button_psacentral.gif" alt="PSA Central (link will open in a new window)" border="0" title="PSA Central (link will open in a new window)"></a>
 				<form name="acsearch" id="acsearch" method="post" action="search.aspx" onsubmit="return s_validate(this);">
 					<input onfocus="clear_search(this)" name="keywords" id="keywords" type="text" value="search">
@@ -41,13 +41,13 @@
 					<img src="images/lcol_dbl_line.gif" alt="">
 				</div>
 				<div id="lcol_news_signup"><img src="images/lcol_dbl_line.gif" alt="">
-<img src="images/lcol_signup.gif" alt="" name="signup_lvl" border="0" usemap="#signup" class="signup_btn" title="">
+<img src="images/lcol_signup_gallery.gif" alt="" name="signup_lvl" border="0" usemap="#signup" class="signup_btn" title="">
 <map name="signup" id="signup">
 	<area shape="rect" coords="2,1,180,33" href="default.aspx?id=248" alt="Sign up to receive news from the Ad Council" title="Sign up to receive news from the Ad Council">
-	<area shape="rect" coords="3,35,183,66" href="http://www.adlibbing.org" target="_blank" alt="Read the Ad Council Blog (link opens in a new window)" title="Read the Ad Council Blog (link opens in a new window)">
+	<!--area shape="rect" coords="3,35,183,66" href="http://www.adlibbing.org"  target="_blank" alt="Read the Ad Council Blog (link opens in a new window)" title="Read the Ad Council Blog (link opens in a new window)" /-->
+<area shape="rect" coords="3,35,183,66" href="http://www.adcouncil.org/gallery.html" target="_blank" alt="Preview and vote for your favorite PSAs" (link="" opens="" in="" a="" new="" window)"="" title="Preview and vote for your favorite PSAs">	
 	<area shape="rect" coords="2,67,178,97" href="default.aspx?id=101" alt="Subscribe to our News Feed" title="Subscribe to our News Feed">
 </map>
-
 				</div>
 				<script language="javascript" type="text/javascript"><!--
 					document.write('<div id="text_resize_lvl"><img id="s" alt="Change the font size to small" title="Change the font size to small" src="images/txt_resize_sm_on.gif" onclick="javascript:txtSm();" onkeypress="javascript:txtSm();" /><img id="m" alt="Change the font size to medium" title="Change the font size to medium" src="images/txt_resize_med.gif" onclick="javascript:txtMed();" onkeypress="javascript:txtMed();" /><img id="l" alt="Change the font size to large" title="Change the font size to large" src="images/txt_resize_lg.gif" onclick="javascript:txtLg();" onkeypress="javascript:txtLg();" /></div>')
@@ -57,7 +57,7 @@
 			<div id="main">
 				<div id="crumbs"><span class="crumbs"><a href="default.aspx?id=1" class="crumbs">Home</a> &gt; </span><span class="crumbsOn">Privacy Policy</span></div>
 				<div id="copy">
-					<script language="javascript" type="text/javascript">random_head()</script><img src="images/lvl_images/level_03.jpg" border="0">
+					<script language="javascript" type="text/javascript">random_head()</script><img src="images/lvl_images/level_01.jpg" border="0">
 					<noscript><img src="images/lvl_images/level_01.jpg" border="0" alt="Random Images" title="Random Images" /></noscript>
 					<div class="hr"></div>
 					<h1>Privacy Policy</h1>
@@ -83,6 +83,12 @@
 		</div>
 		
 	</div>
-
+<script src="http://www.google-analytics.com/urchin.js" type="text/javascript">
+</script>
+<script type="text/javascript">
+_uacct = "UA-2716226-1";
+_userv=2; 
+urchinTracker();
+</script>
 
 </body></html>
